--- a/package.json
+++ b/package.json
@@ -28,6 +28,11 @@
                     "pack:win":  "electron-builder -w portable",
                     "pack:mac":  "electron-builder -m",
                     "pack:linux":  "electron-builder -l AppImage",
+                    "build:installers":  "powershell -ExecutionPolicy Bypass -File scripts/build-installers.ps1",
+                    "build:portable":  "npm run build \u0026\u0026 electron-builder --win portable",
+                    "build:nsis":  "npm run build \u0026\u0026 electron-builder --win nsis",
+                    "build:msi":  "npm run build \u0026\u0026 electron-builder --win msi",
+                    "post-install":  "powershell -ExecutionPolicy Bypass -File scripts/post-install-simple.ps1",
                     "test:typecheck":  "tsc --noEmit",
                     "test:security":  "tsx test/test-security-complete.test.ts",
                     "test:hardening":  "tsx test/test-security-hardening.test.ts",
