--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 ﻿{
     "name":  "usb-video-vault",
-    "version":  "1.0.4-test",
+    "version":  "1.0.4",
     "private":  true,
     "main":  "dist/main/index.js",
     "type":  "module",
