--- a/package.json
+++ b/package.json
@@ -1,61 +1,67 @@
 {
-    "name":  "usb-video-vault",
-    "version":  "0.1.3",
-    "description":  "USB Video Vault",
-    "author":  "Yindo",
-    "main":  "dist/main/index.js",
-    "type":  "module",
-    "scripts":  {
-                    "clean":  "rimraf dist",
-                    "build":  "npm run clean \u0026\u0026 npm run build:renderer \u0026\u0026 npm run build:main",
-                    "build:renderer":  "vite build --config vite.renderer.config.ts",
-                    "build:main":  "tsc -p tsconfig.main.json",
-                    "postbuild:main":  "node scripts/copy-preload.cjs"
-                },
-    "build":  {
-                  "appId":  "com.yindo.usbvideovault",
-                  "productName":  "USB Video Vault",
-                  "asar":  true,
-                  "directories":  {
-                                      "output":  "dist"
-                                  },
-                  "files":  [
-                                "dist/**",
-                                "dist/main/**",
-                                "dist/renderer/**",
-                                "!**/*.map"
-                            ],
-                  "win":  {
-                              "target":  [
-                                             "nsis",
-                                             "portable"
-                                         ]
-                          },
-                  "nsis":  {
-                               "oneClick":  false,
-                               "perMachine":  true,
-                               "allowToChangeInstallationDirectory":  true
-                           }
-              },
-    "devDependencies":  {
-                            "@vitejs/plugin-react":  "^4.3.1",
-                            "vite":  "^5.4.0",
-                            "typescript":  "^5.0.0",
-                            "rimraf":  "^5.0.0",
-                            "tailwindcss":  "^3.4.13",
-                            "autoprefixer":  "^10.4.20",
-                            "postcss":  "^8.4.47",
-                            "electron":  "^31.7.7",
-                            "electron-builder":  "^26.0.12",
-                            "@types/node":  "^22.18.1",
-                            "@types/mime-types":  "^3.0.1"
-                        },
-    "dependencies":  {
-                         "react":  "^18.3.1",
-                         "react-dom":  "^18.3.1",
-                         "electron-log":  "^5.4.3",
-                         "tweetnacl":  "^1.0.3",
-                         "mime-types":  "^3.0.1",
-                         "node-machine-id":  "^1.1.12"
-                     }
+  "name": "usb-video-vault",
+  "version": "0.1.4",
+  "description": "USB Video Vault",
+  "author": "Yindo",
+  "main": "dist/main/index.js",
+  "type": "module",
+  "scripts": {
+    "prebuild": "node tools/sanitize-package-json.cjs",
+    "preversion": "node tools/sanitize-package-json.cjs",
+    "prepack": "node tools/sanitize-package-json.cjs",
+    "clean": "rimraf dist",
+    "build": "npm run clean && npm run build:renderer && npm run build:main",
+    "build:renderer": "vite build --config vite.renderer.config.ts",
+    "build:main": "tsc -p tsconfig.main.json",
+    "postbuild:main": "node scripts/copy-preload.cjs"
+  },
+  "build": {
+    "appId": "com.yindo.usbvideovault",
+    "productName": "USB Video Vault",
+    "asar": true,
+    "directories": {
+      "output": "dist"
+    },
+    "files": [
+      "dist/**",
+      "dist/main/**",
+      "dist/renderer/**",
+      "!**/*.map"
+    ],
+    "win": {
+      "icon": "build/icon.ico",
+      "target": [
+        "nsis",
+        "portable"
+      ]
+    },
+    "nsis": {
+      "oneClick": false,
+      "perMachine": true,
+      "allowToChangeInstallationDirectory": true
+    }
+  },
+  "devDependencies": {
+    "@types/mime-types": "^3.0.1",
+    "@types/node": "^22.18.1",
+    "@types/react": "^19.1.13",
+    "@types/react-dom": "^19.1.9",
+    "@vitejs/plugin-react": "^4.3.1",
+    "autoprefixer": "^10.4.20",
+    "electron": "^31.7.7",
+    "electron-builder": "^26.0.12",
+    "postcss": "^8.4.47",
+    "rimraf": "^5.0.0",
+    "tailwindcss": "^3.4.13",
+    "typescript": "^5.0.0",
+    "vite": "^5.4.0"
+  },
+  "dependencies": {
+    "electron-log": "^5.4.3",
+    "mime-types": "^3.0.1",
+    "node-machine-id": "^1.1.12",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "tweetnacl": "^1.0.3"
+  }
 }
